--- a/StackCompiler.cabal
+++ b/StackCompiler.cabal
@@ -16,6 +16,10 @@ executable StackCompiler
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+
+  build-depends:
+    base >=4.6 && <4.7,
+    parsec >=3.1.5
+
   -- hs-source-dirs:      
   default-language:    Haskell2010
